--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Հոդվածների ցանկ</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
     </script>
@@ -28,7 +28,9 @@
             </ul>
             <h2 id="հանրահաշիվ">Հանրահաշիվ</h2>
             <ul>
-            <li><a href="#">Աստիճանի երկուական բարձրացում</a></li>
+            <li><a
+            href="Հանրահաշիվ/Աստիճանի%20երկուական%20բարձրացում.html">Աստիճանի
+            երկուական բարձրացում</a></li>
             <li>շուտով</li>
             </ul>
             <h2 id="կոմբինատորիկա">Կոմբինատորիկա</h2>
@@ -119,7 +121,7 @@
     <div class="footer">
         <div id="logo">ՀՈԴՎԱԾՈՎ</div>
     </div>
-    <script src="stickynav.js"></script>
+    <script src="style/stickynav.js"></script>
 </body>
 
 </html>
