--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             </ul>
             <h2 id="հանրահաշիվ">Հանրահաշիվ</h2>
             <ul>
+            <li><a href="Հանրահաշիվ/Ամբողջ%20թվեր.html">Ամբողջ
+            թվեր</a></li>
             <li><a
             href="Հանրահաշիվ/Աստիճանի%20երկուական%20բարձրացում.html">Աստիճանի
             երկուական բարձրացում</a></li>
