"Էվկլիդեսի ալգորիթմ" հոդվածը
"Էվկլիդեսի ալգորիթմ" նոր հոդվածը
փոփոխություն հոդվածների ցանկում

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <ul>
             <li><a href="Հանրահաշիվ/Ամբողջ%20թվեր.html">Ամբողջ
             թվեր</a></li>
+            <li><a href="Հանրահաշիվ/Էվկլիդեսի%20ալգորիթմ.html">Էվկլիդեսի
+            ալգորիթմ</a></li>
             <li><a
             href="Հանրահաշիվ/Աստիճանի%20երկուական%20բարձրացում.html">Աստիճանի
             երկուական բարձրացում</a></li>
